--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -1,33 +1,32 @@
 {% set CHANNELS_NUMBER = 3 -%}
-{% set SEND_QUEUE_SIZE = 10 -%}
+{% set BULK_BUFFER_LEN = 16 -%}
 {
-    "title": "WB-MDALI_template_title",
+    "title": "WB-DALI_template_title",
     "device_type": "WB-MDALI",
     "group": "g-wb",
     "hw": [
         {
-            "signature": "WB-MDALI"
+            "signature": "WB-DALI"
         }
     ],
     "device": {
-        "name": "WB-MDALI",
-        "id": "wb-mdali",
+        "name": "WB-DALI",
+        "id": "wb-dali",
         "max_read_registers": 0,
         "response_timeout_ms": 1,
+        "frame_timeout_ms": 8,
         "enable_wb_continuous_read": true,
 
         "groups": [
+            {% for ch in range(CHANNELS_NUMBER) -%}
             {
-                "title": "Bus states",
-                "id": "g_bus_states"
+                "title": "Channel {{ ch + 1 }}",
+                "id": "g_channel_{{ ch + 1 }}"
             },
+            {% endfor -%}
             {
-                "title": "Transparent mode",
-                "id": "g_transparent_mode"
-            },
-            {
-                "title": "Error counters",
-                "id": "g_error_counters"
+                "title": "Inputs",
+                "id": "g_inputs"
             },
             {
                 "title": "General",
@@ -62,190 +61,62 @@
         "channels": [
             {% for ch in range(CHANNELS_NUMBER) -%}
             {
-                "name": "Transmit 16bit forward frame over channel {{ ch + 1 }}",
-                "id": "channel{{ ch + 1 }}_transmit_16bit_forward",
-                "reg_type": "holding",
-                "address": {{ 1800 + ch }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_transparent_mode"
-            },
-            {
-                "name": "Transmit 24bit forward frame over channel {{ ch + 1 }}, left aligned",
-                "id": "channel{{ ch + 1 }}_transmit_24bit_forward",
-                "reg_type": "holding",
-                "address": {{ 1805 + ch * 2 }},
-                "type": "value",
-                "format": "u32",
-                "enabled": false,
-                "group": "g_transparent_mode"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} reply timeout",
-                "id": "channel{{ ch + 1 }}_reply_timeout",
-                "reg_type": "input",
-                "address": {{ 1815 + ch }},
+                "name": "Bus {{ ch + 1 }} power supply",
+                "id": "bus_{{ ch + 1 }}_power_supply",
+                "reg_type": "coil",
+                "address": {{ 1010 + ch }},
                 "type": "switch",
-                "format": "u16",
-                "enabled": true,
-                "group": "g_transparent_mode"
+                "group": "g_channel_{{ ch + 1 }}"
             },
             {
-                "name": "Received 8bit backward frame from channel {{ ch + 1 }}, left aligned",
-                "id": "channel{{ ch + 1 }}_receive_8bit_backward",
+                "name": "Bus {{ ch + 1 }} state",
+                "id": "bus_{{ ch + 1 }}_state",
+                "reg_type": "discrete",
+                "address": {{ 1000 + ch }},
+                "type": "switch",
+                "group": "g_channel_{{ ch + 1 }}"
+            },
+            {
+                "name": "Bus {{ ch + 1 }} overheat",
+                "id": "bus_{{ ch + 1 }}_overheat",
+                "reg_type": "discrete",
+                "address": {{ 1010 + ch }},
+                "type": "switch",
+                "group": "g_channel_{{ ch + 1 }}"
+            },
+            {
+                "name": "Bus {{ ch + 1 }} temperature",
+                "id": "bus_{{ ch + 1 }}_temperature",
                 "reg_type": "input",
-                "address": {{ 1820 + ch }},
+                "address": {{ 4020 + ch }},
+                "type": "temperature",
+                "format": "s16",
+                "scale": 0.1,
+                "enabled": false,
+                "group": "g_channel_{{ ch + 1 }}"
+            },
+            {
+                "name": "Bus {{ ch + 1 }} bulk send pointer",
+                "id": "bus_{{ ch + 1 }}_bulk_send_pointer",
+                "reg_type": "holding",
+                "address": {{ 1432 + (ch * 1000) }},
                 "type": "value",
                 "format": "u16",
                 "sporadic": true,
-                "enabled": false,
-                "group": "g_transparent_mode"
+                "group": "g_channel_{{ ch + 1 }}"
             },
+            {% for ptr in range(BULK_BUFFER_LEN) -%}
             {
-                "name": "channel{{ ch + 1 }}_send_pointer",
-                "id": "channel{{ ch + 1 }}_send_pointer",
-                "reg_type": "holding",
-                "address": 1960,
-                "type": "value",
-                "format": "u16",
-                "enabled": true,
-                "sporadic" : true,
-                "group": "g_transparent_mode"
-            },
-            {% for item in range(SEND_QUEUE_SIZE) -%}
-            {
-                "name": "channel{{ ch + 1 }}_reply{{ item }}",
-                "id": "channel{{ ch + 1 }}_reply{{ item }}",
+                "name": "Bus {{ ch + 1 }} bulk send reply {{ ptr }}",
+                "id": "bus_{{ ch + 1 }}_bulk_send_reply_{{ ptr }}",
                 "reg_type": "input",
-                "address": {{ 1970 + item }},
+                "address": {{ 1500 + (ch * 1000) + ptr }},
                 "type": "value",
                 "format": "u16",
-                "enabled": true,
-                "sporadic" : true,
-                "group": "g_transparent_mode"
+                "sporadic": true,
+                "group": "g_channel_{{ ch + 1 }}"
             },
             {% endfor -%}
-            {
-                "name": "channel{{ ch + 1 }}_txrx",
-                "reg_type": "holding",
-                "address": 1900,
-                "type": "value",
-                "format": "u16",
-                "enabled": true,
-                "sporadic" : true,
-                "group": "g_transparent_mode"
-            },
-            {
-                "name": "Received 24bit forward frame from channel {{ ch + 1 }}, left aligned",
-                "id": "channel{{ ch + 1 }}_receive_24bit_forward",
-                "reg_type": "input",
-                "address": {{ 1825 + ch * 2 }},
-                "type": "value",
-                "format": "u32",
-                "sporadic": true,
-                "enabled": true,
-                "group": "g_transparent_mode"
-            },
-            {
-                "name": "24bit forward frame is received from channel {{ ch + 1 }}",
-                "id": "channel{{ ch + 1 }}_received_24bit_flag",
-                "reg_type": "input",
-                "address": {{ 1835 + ch }},
-                "type": "switch",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_transparent_mode"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} bus is powered",
-                "id": "channel{{ ch + 1 }}_bus_is_powered",
-                "reg_type": "input",
-                "address": {{ 1850 + ch }},
-                "type": "switch",
-                "format": "u16",
-                "group": "g_bus_states"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} bus state changed after request",
-                "id": "channel{{ ch + 1 }}_bus_state_changed",
-                "reg_type": "input",
-                "address": {{ 1880 + ch }},
-                "type": "switch",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_transparent_mode"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} start bit is not received error counter",
-                "id": "channel{{ ch + 1 }}_nostart_error_counter",
-                "reg_type": "input",
-                "address": {{ 1855 + ch * 10 }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} bit time error counter",
-                "id": "channel{{ ch + 1 }}_bittime_error_counter",
-                "reg_type": "input",
-                "address": {{ 1856 + ch * 10 }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} frame length error counter",
-                "id": "channel{{ ch + 1 }}_framelen_error_counter",
-                "reg_type": "input",
-                "address": {{ 1857 + ch * 10 }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} stop bits are not received error counter",
-                "id": "channel{{ ch + 1 }}_nostops_error_counter",
-                "reg_type": "input",
-                "address": {{ 1858 + ch * 10 }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} frame receive timeout error counter",
-                "id": "channel{{ ch + 1 }}_timeout_error_counter",
-                "reg_type": "input",
-                "address": {{ 1859 + ch * 10 }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} bus is not powered error counter",
-                "id": "channel{{ ch + 1 }}_buspower_error_counter",
-                "reg_type": "input",
-                "address": {{ 1860 + ch * 10 }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
-            {
-                "name": "Channel {{ ch + 1 }} previous packet is not sent error counter",
-                "id": "channel{{ ch + 1 }}_txbusy_error_counter",
-                "reg_type": "input",
-                "address": {{ 1861 + ch * 10 }},
-                "type": "value",
-                "format": "u16",
-                "enabled": false,
-                "group": "g_error_counters"
-            },
             {% endfor -%}
             {
                 "name": "Serial",
@@ -299,8 +170,7 @@
                 "name": "MCU Temperature",
                 "reg_type": "input",
                 "address": 124,
-                "type": "value",
-                "units": "deg C",
+                "type": "temperature",
                 "format": "s16",
                 "scale": 0.1,
                 "enabled": false,
@@ -325,36 +195,27 @@
                 "units": "V",
                 "enabled": false,
                 "group": "g_hw_info"
-            },
-            {
-                "name": "reset_without_save_state",
-                "reg_type": "holding",
-                "address": 120,
-                "type": "pushbutton",
-                "format": "u16",
-                "group": "general",
-                "enabled": false
             }
         ],
         "translations": {
             "en": {
-                "WB-MDALI_template_title": "WB-MDALI (3-channel RS485-DALI gate)",
+                "WB-DALI_template_title": "WB-DALI (3-channel RS485-DALI gate)",
                 "baud_rate_description": "Make sure that communication with the device is estabilished before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600"
             },
             "ru": {
-                "WB-MDALI_template_title": "WB-MDALI (3-канальный шлюз RS485-DALI)",
+                "WB-DALI_template_title": "WB-DALI (3-канальный шлюз RS485-DALI)",
+                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость. Значение по умолчанию - 9600",
+
                 "Bus states": "Состояние шин",
                 "Error counters": "Счетчики ошибок",
                 "Transparent mode": "Прозрачный режим",
-                "General": "Общее",
-                "HW Info": "Данные модуля",
 
                 {% for ch in range(CHANNELS_NUMBER) -%}
                 "Transmit 16bit forward frame over channel {{ ch + 1 }}": "Передать 16-битный forward фрейм по каналу {{ ch + 1 }}",
                 "Transmit 24bit forward frame over channel {{ ch + 1 }}, left aligned": "Передать 24-битный forward фрейм по каналу {{ ch + 1 }}, выровнен по левому краю",
                 "Channel {{ ch + 1 }} reply timeout": "Таймаут ответа канала {{ ch + 1 }}",
-                "Received 8bit backward frame from channel {{ ch + 1 }}, left aligned": "Получен 8-битный backward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
-                "Received 24bit forward frame from channel {{ ch + 1 }}, left aligned": "Получен 24-битный forward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
+                "Received 8bit backward frame from channel {{ ch + 1 }}, left aligned": "Полученный 8-битный backward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
+                "Received 24bit forward frame from channel {{ ch + 1 }}, left aligned": "Полученный 24-битный forward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
                 "24bit forward frame is received from channel {{ ch + 1 }}": "Получен 24-битный фрейм от канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} bus is powered": "Шина канала {{ ch + 1 }} запитана",
                 "Channel {{ ch + 1 }} bus state changed after request": "Состояние шины канала {{ ch + 1 }} изменилось после запроса",
@@ -365,8 +226,14 @@
                 "Channel {{ ch + 1 }} stop bits are not received error counter": "Счетчик ошибок отсутствия стоп-битов канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} frame receive timeout error counter": "Счетчик ошибок таймаута приема фрейма канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} bus is not powered error counter": "Счетчик ошибок незапитанности шины канала {{ ch + 1 }}",
-                "Channel {{ ch + 1 }} previous packet is not sent error counter": "Счетчик ошибок неотправленности прерыдудщего фрейма канала {{ ch + 1 }}",
+                "Channel {{ ch + 1 }} tx busy error counter": "Счетчик ошибок занятости шины {{ ch + 1 }}",
+
+                "Channel {{ ch + 1 }} sent frames counter": "Счетчик отправленных фреймов канала {{ ch + 1 }}",
+                "Channel {{ ch + 1 }} received frames counter": "Счетчик принятых фреймов канала {{ ch + 1 }}",
                 {% endfor -%}
+
+                "General": "Общее",
+                "HW Info": "Данные модуля",
 
                 "Serial": "Серийный номер",
                 "FW Version": "Версия прошивки",
@@ -376,9 +243,9 @@
                 "MCU Temperature": "Температура МК",
                 "MCU Voltage": "Напряжение питания МК",
                 "Minimum MCU Voltage Since Startup": "Минимальное напряжение питания МК с момента включения",
-                
-                "Baud rate": "Скорость обмена",
-                "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость. Значение по умолчанию - 9600"
+
+                "Baud rate": "Скорость обмена"
+
             }
         }
     }
